[gd_scene load_steps=5 format=2]

[ext_resource path="res://PoetsenOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://SettingsMenu/SettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://SettingsMenu/difficulty_buttongroup.tres" type="ButtonGroup" id=3]

[sub_resource type="DynamicFont" id=3]
size = 25
use_filter = true
font_data = ExtResource( 1 )

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 2.0
margin_right = 1277.0
margin_bottom = 719.0
color = Color( 0.223529, 0.25098, 0.34902, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -264.0
margin_top = -82.0
margin_right = 264.0
margin_bottom = 82.0

[node name="SettingsContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 528.0
margin_bottom = 164.0
alignment = 1

[node name="DifficultyContainer" type="HBoxContainer" parent="MarginContainer/SettingsContainer"]
margin_top = 1.0
margin_right = 528.0
margin_bottom = 37.0

[node name="Label" type="Label" parent="MarginContainer/SettingsContainer/DifficultyContainer"]
margin_top = 3.0
margin_right = 244.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 3 )
text = "Choose Difficulty        "

[node name="EasyBtn" type="Button" parent="MarginContainer/SettingsContainer/DifficultyContainer"]
margin_left = 248.0
margin_right = 314.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
toggle_mode = true
group = ExtResource( 3 )
text = "Easy"

[node name="Space" type="Label" parent="MarginContainer/SettingsContainer/DifficultyContainer"]
margin_left = 318.0
margin_top = 11.0
margin_right = 422.0
margin_bottom = 25.0
text = "                          "

[node name="HardBtn" type="Button" parent="MarginContainer/SettingsContainer/DifficultyContainer"]
margin_left = 426.0
margin_right = 496.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
toggle_mode = true
group = ExtResource( 3 )
text = "Hard"

[node name="Space" type="Label" parent="MarginContainer/SettingsContainer"]
margin_top = 41.0
margin_right = 528.0
margin_bottom = 123.0
text = "



"

[node name="Back" type="Button" parent="MarginContainer/SettingsContainer"]
margin_top = 127.0
margin_right = 528.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 3 )
text = "Back"

[connection signal="pressed" from="MarginContainer/SettingsContainer/DifficultyContainer/EasyBtn" to="." method="_on_EasyBtn_pressed"]
[connection signal="pressed" from="MarginContainer/SettingsContainer/DifficultyContainer/HardBtn" to="." method="_on_HardBtn_pressed"]
[connection signal="pressed" from="MarginContainer/SettingsContainer/Back" to="." method="_on_Back_pressed"]
